crates/mega-evm/tests/satin/snapshots/satin__limit_stop__a_contract_reverting_with_a_stops_bytes_is_no_stop.snap
---
source: crates/mega-evm/tests/satin/limit_stop.rs
expression: "&views"
---
{
  "ComputeGas": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 7)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000007",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15042,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 42322
    },
    "result_gas": {
      "total_gas_spent": 42322,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000570000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "DataSize": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(DataSize, 7)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15042,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 42322
    },
    "result_gas": {
      "total_gas_spent": 42322,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000570000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "KVUpdate": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(KVUpdate, 7)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000007",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15042,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 42322
    },
    "result_gas": {
      "total_gas_spent": 42322,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000570000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "StateGrowth": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(StateGrowth, 7)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000030000000000000000000000000000000000000000000000000000000000000007",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15042,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 42322
    },
    "result_gas": {
      "total_gas_spent": 42322,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000570000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
